<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Fragment.SignInFragment">

    <include
        android:id="@+id/llProgressBar_sign_in"
        android:visibility="gone"
        layout="@layout/progress_bar"/>


    <TextView
        android:id="@+id/textView"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/textView_login" />

    <EditText
        android:id="@+id/sign_in_email"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_border_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/sign_in_password"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_border_edittext"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/sign_in_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="10dp"
        android:text="@string/forgot_password"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="10dp" />

    <Button
        android:id="@+id/sign_in_button"
        android:background="@drawable/custom_button"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/log_in" />



</LinearLayout>